fix: theme toggle btn flash & scrollbar

--- a/styles/global.css
+++ b/styles/global.css
@@ -25,7 +25,7 @@
       @apply bg-gray-400 rounded dark:bg-gray-600;
     }
     &::-webkit-scrollbar-track {
-      @apply rounded bg-gray-100 dark:bg-gray-900;
+      @apply rounded bg-gray-100 dark:bg-gray-800;
     }
   }
 
